@@ -88,10 +88,8 @@
   <td class="tc2">&nbsp;</td>
   <td class="tc3">&nbsp;</td>
   <td class="tc4">Released [[= sortbut($url, 'released') ]]</td>
-  <td class="tc5">Rating [[= sortbut($url, 'votes') ]]</td>
  </tr></thead>
  [[ for (@{$d{vn}}) {
-  $_->{c_votes} =~ s#^([0-9]{2}.[0-9]{2})\|([0-9]{4})$#$1 == 0 ? sprintf '- (%d)', $2 : sprintf '%.2f (%d)', $1, $2#e;
   $_->{c_released} =~ s#^([0-9]{4})([0-9]{2}).+#$1==0?'N/A':$1==9999?'TBA':(($2&&$2<13?($Time::CTime::MoY[$2-1].' '):'').$1)#e;
   $_->{c_platforms} = join '', map {
     $_ ne 'oth' ? '<acronym class="icons '.$_.'" title="'._hchar($VNDB::PLAT->{$_}).'">&nbsp;</acronym>' : ()
@@ -103,7 +101,6 @@
   <td class="tc2">[[= $_->{c_platforms} ]]</td>
   <td class="tc3">[[= $_->{c_languages} ]]</td>
   <td class="tc4">[[: $_->{c_released} ]]</td>
-  <td class="tc5">[[: $_->{c_votes} ]]</td>
  </tr>
  [[ } ]]-
 </table>
