@@ -10,6 +10,7 @@ TODO:
 	- Integrated discussion board
 	- Colored diff for alies field
 	- 'ttabs' for user entries
+	- Removed the rating system
 
 1.18 - 2008-07-02 (r51)
 	- Releases, producers and visual novel items can't be fully deleted anymore
